docs/v8.2/packages_api/runtime/datasourcesrv.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "DataSourceSrv"
keywords = ["grafana","documentation","sdk","@grafana/runtime"]
type = "docs"
disable_edit_link = true
+++

## DataSourceSrv interface

This is the entry point for communicating with a datasource that is added as a plugin (both external and internal). Via this service you will get access to the [DataSourceApi]({{< relref "../data/datasourceapi.md" >}}) that have a rich API for communicating with the datasource.

<b>Signature</b>

```typescript
export interface DataSourceSrv 
```
<b>Import</b>

```typescript
import { DataSourceSrv } from '@grafana/runtime';
```
<b>Methods</b>

|  Method | Description |
|  --- | --- |
|  [get(nameOrUid, scopedVars)](#get-method) | Returns the requested dataSource. If it cannot be found it rejects the promise. |
|  [getInstanceSettings(nameOrUid)](#getinstancesettings-method) | Get settings and plugin metadata by name or uid |
|  [getList(filters)](#getlist-method) | Get a list of data sources |

### get method

Returns the requested dataSource. If it cannot be found it rejects the promise.

<b>Signature</b>

```typescript
get(nameOrUid?: string | null, scopedVars?: ScopedVars): Promise<DataSourceApi>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  nameOrUid | <code>string &#124; null</code> | name or Uid of the datasource plugin you want to use. |
|  scopedVars | <code>ScopedVars</code> | variables used to interpolate a templated passed as name. |

<b>Returns:</b>

`Promise<DataSourceApi>`

### getInstanceSettings method

Get settings and plugin metadata by name or uid

<b>Signature</b>

```typescript
getInstanceSettings(nameOrUid: string | null | undefined): DataSourceInstanceSettings | undefined;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  nameOrUid | <code>string &#124; null &#124; undefined</code> |  |

<b>Returns:</b>

`DataSourceInstanceSettings | undefined`

### getList method

Get a list of data sources

<b>Signature</b>

```typescript
getList(filters?: GetDataSourceListFilters): DataSourceInstanceSettings[];
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  filters | <code>GetDataSourceListFilters</code> |  |

<b>Returns:</b>

`DataSourceInstanceSettings[]`

